--- a/tab-test2.html
+++ b/tab-test2.html
@@ -147,15 +147,14 @@
 	<script src="bridget.js"></script>
 	<script src="acc.js"></script>
 	<script>
-		$(document).ready(function () {
-			$('.tabpanel').tabpanel({
-				//tabClass: 'tabs',
-				//panelClass: 'panels',
-				multiselectable: false
-			});
-		//var panel1 = new tabpanel("tabpanel1", false);
-		});
-		<script>
+//		$(document).ready(function () {
+//			$('.tabpanel').tabpanel({
+//				//tabClass: 'tabs',
+//				//panelClass: 'panels',
+//				multiselectable: false
+//			});
+//		//var panel1 = new tabpanel("tabpanel1", false);
+//		});
 			$(document).ready(function () {
 			$('.tpanelacc').tpanelacc({
 //				accordian: true,
@@ -176,7 +175,6 @@
 				//accordianFirstOpen:false
 			});
 		});
-	</script>
 	</script>
 </body>
 </html>
