--- a/tab-test2.html
+++ b/tab-test2.html
@@ -145,7 +145,7 @@
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="bridget.js"></script>
-	<script src="acc.js"></script>
+	<script src="tpanelacc.js"></script>
 	<script>
 //		$(document).ready(function () {
 //			$('.tabpanel').tabpanel({
@@ -171,7 +171,7 @@
 				//panelClass: 'faq-item', //panel element class default panel
 				//createToggleElm: false, //default true
 				//accordianToggleElm: 'h2',
-				multiselectable: false,
+				//multiselectable: false,
 				//accordianFirstOpen:false
 			});
 		});
