--- a/tab-test1.html
+++ b/tab-test1.html
@@ -13,7 +13,6 @@
 				padding: 0;
 				list-style: none;
 				display: block;
-				width: 100%;
 			}
 
 			.tab {
@@ -156,10 +155,11 @@
 //					//tabClass: 'tabs', //tab element class default panel
 //					//panelClass: 'faq-item', //panel element class default panel
 					createToggleElm: false, //default true
-//					accordianToggleElm: 'h2',
-					multiselectable: true,
+					accordianToggleElm: 'h3',
+					multiselectable: false,
                     closeable: true,
 //					accordianFirstOpen:false
+                    accordianToggleble: true
 				});
 			});
 		</script>
